# pluvius

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.br.md  DEVELOPMENT.en.md  Dockerfile  Dockerfile.feature-extractor  LICENSE  Makefile  README.md  cabal.project.freeze  docker-compose.yaml  feature-extractor  go.mod  mix.exs  packages.cmake  pluvius.cabal  tags
app/: Main.hs
app/FeatureExtractor/: Main.hs
app/TransformFeatures/: Main.hs
cmd/feature-extractor/: main.go
config/: config.exs
data/: 22_08_2024.csv  real_data.csv  simple.csv  weather.csv  weather_sp_jan_aug.csv
data/evaluation/: pluvius_lr-v1.onnx
feature-extractor/: Cargo.toml
feature-extractor/src/: main.rs
featurizer/: CHANGELOG.md  Dockerfile  featurizer.cabal
include/feature_extractor/: process.hpp
internal/feature_extractor/: extract.go  types.go
lib/: pluvius.ex  pluvius_iris.ex
lib/core/: data_pipeline.ex  pipeline_usecase.ex
lib/pluvius/: application.ex  extract.ex  model.ex
makefiles/feature-extractor/: build.mk  run.mk
notebooks/: analysis.ipynb  data_analysis.livemd
preprocessing/: analysis.py  main.py  merge.py  requirements.txt  std.py
science/: api.py  grid_search.py  model.py  pipeline.py  requirements.txt  rf_pluvius.onnx  rf_pluvius_v2.onnx  rf_pluvius_v3.onnx
scripts/: enrich.sql  mongo_enriched.js
src/: CMakeLists.txt  Config.hs  main.rs
src/Core/: DataPipeline.hs  PipelineUseCase.hs
src/Core/Adapter/: Pipeline.hs
src/Core/Entity/: Settings.hs  Weather.hs
src/Core/Gateway/: PipelineGateway.hs
src/Core/Mapper/: DocumentToWeather.hs  WeatherTransformer.hs
src/Core/UseCase/: PipelineUseCase.hs
src/FeatureExtractor/: ExtractCSV.hs  Query.hs  Transformer.hs  Types.hs  Worker.hs
src/File/: CSV.hs
src/feature_extractor/: CMakeLists.txt  main.cpp  process.cpp
test/: Main.hs  pluvius_test.exs
utils/: analysis.py  dataset_download.py
