cabal-version:      3.0
name:               pluvius
version:            0.1.0.0
license:            NONE
author:             Vitor Roque
maintainer:         vitor.roquep@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall
common extensions
    default-extensions:
          OverloadedStrings
        , DeriveGeneric
        , DataKinds
        , TemplateHaskell
        , TypeApplications
        , FlexibleContexts
        , TypeApplications
        , StrictData

library
    import:           warnings, extensions
    exposed-modules:  FeatureExtractor.Types
                    , FeatureExtractor.ExtractCSV

    build-depends:    base ^>=4.17.2.1
                    , conduit
                    , bytestring
                    , vector
                    , cassava
                    , text
                    , parallel

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable feature-extractor
    import:           warnings, extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , pluvius

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N

